--- a/app/assets/stylesheets/share/_variables.scss
+++ b/app/assets/stylesheets/share/_variables.scss
@@ -20,7 +20,7 @@
   text-align: center;
   cursor: pointer;
   border: 1px solid;
-  border-radius: 10%;
+  border-radius: 10px;
   padding: 10px 20px;
   transition: .3s;
 }
