--- a/app/views/tasks/_task_form.html.erb
+++ b/app/views/tasks/_task_form.html.erb
@@ -12,6 +12,11 @@
       <div class="form-wrapper__form-group__field"><%= f.text_area :body %></div>
     </div>
     <div class="form-wrapper__form-group">
+      <p>スペースを入力することで複数のタグを付けることが可能です。（例：毎日　外出）</p>
+      <div class="form-wrapper__form-group__label"><%= f.label :tag_name, "検索タグ" %></div>
+      <div class="form-wrapper__form-group__field"><%= f.text_field :tag_name %></div>
+    </div>
+    <div class="form-wrapper__form-group">
       <%= f.check_box :template_task, {}, true, false %>
       <%= f.label :template_task, "テンプレートとして保存する" %>
     </div>
