--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -6,9 +6,39 @@
     <p class="visual-wrapper__title">「苦手な家事もこれなら頑張れそう」</p>
     <p class="visual-wrapper__bottom">を叶えるタスク管理サイト</p>
 
-    <%= link_to 'ログイン', new_user_session_path, class: "visual-wrapper__btn" %>
+    <p class="visual-wrapper__btn-area"><%= link_to 'ログイン', new_user_session_path, class: "visual-wrapper__btn" %></p>
   </div>
-  <div class="text-wrapper">
-    ここに概要
+  <div class="about-container">
+    <div class="about-block__top">
+      <p class="about-block__top__heading">シェアカジ！とは</p>
+      <p class="about-block__top__text">
+        家事応援・共有アプリケーション。<br>
+        家事のタスク進捗を同居者と共有できます。（一人でも使用可能）<br>
+        タスク達成により経験値を入手してレベルアップするなど、ゲーム要素も盛り込まれています。
+      </p>
+    </div>
+    <div class="about-block__middle">
+      <p class="about-block__middle__heading">生まれたきっかけ</p>
+      <p class="about-block__middle__text">
+        同居者と「家事」について揉めた経験があります。<br>
+        家事を苦手に感じながらも毎日頑張っているのに、どうして私ばかり家事をして相手は手伝ってくれないのだろう、と。<br>
+        しかし話し合ってみると、私は家事をしている事に対して何も反応をもらえないことに不満を持ち、<br>
+        同居相手はそもそも、私がどんな家事をしているかすら知らず、協力するきっかけを失っていました。<br>
+      </p>
+      <p class="about-block__middle__text">
+        それならば、家事をタスクとして管理し、その進捗を共有できるものを。<br>
+        そして、少しでも達成することに楽しさを。
+      </p>
+      <p class="about-block__middle__text">
+        そんな思いを胸に、このアプリケーションを制作しました。
+      </p>
+    </div>
+    <div class="about-block__bottom">
+      <p class="about-block__bottom__heading">最後に</p>
+      <p class="about-block__bottom__text">
+        コロナ禍により自宅で過ごす時間が増えると、家事をしている様子をお互いに見かけることが増えていると思います。<br>
+        一緒に暮らし、当たり前になってきた日常を見直すことで、相手に感謝を伝えるきっかけになれば幸いです。
+      </p>
+    </div>
   </div>
 </div>
