--- a/app/assets/stylesheets/share/header.scss
+++ b/app/assets/stylesheets/share/header.scss
@@ -13,12 +13,9 @@
   z-index: 9;
   display: flex;
 
-  &__logo {
-    color: $thema-color3;
-    font-size: 20px;
-    font-weight: bold;
-    text-decoration: none;
-    padding: 0 2rem;
+  &__logo img {
+    height: 3rem;
+    margin-left: 5vw;
   }
 }
 
@@ -28,7 +25,7 @@
   display: flex;
 
   &__item {
-    padding: 0 1rem;
+    padding: 0 1.5rem;
 
   }
 
