--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,14 @@
 <header class="header">
-  <%= link_to "シェアカジ！", root_path, class: "header__logo" %>
+  <%= link_to root_path, class: "header__logo" do %>
+    <%= image_tag 'logo.png' %>
+  <% end %>
   <ul class="nav">
     <% if user_signed_in? %>
       <li class="nav__item"><%= link_to 'マイページ', user_path(current_user) %></li>
       <li class="nav__item"><%= link_to 'タスク管理', tasks_path %></li>
       <li class="nav__item"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
     <% else %>
-      <li class="nav__item"><%= link_to 'シェアカジ！とは', about_path %></li>
+
       <li class="nav__item"><%= link_to '新規登録', new_user_registration_path %></li>
       <li class="nav__item"><%= link_to 'ログイン', new_user_session_path %></li>
     <% end %>
