--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,25 @@
-<h2>Change your password</h2>
+<div class="devise-container">
+  <h2 class="devise-container__head">Change your password</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+  <div class="devise-form-wrapper">
+    <%= f.hidden_field :reset_password_token %>
+    <div class="devise-form-wrapper__form-group">
+      <div class="devise-form-wrapper__form-group__label"><%= f.label :password, "New password" %><br />
+      <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+      <% end %>
+      <div class="devise-form-wrapper__form-group__field"><%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+    </div>
+    <div class="devise-form-wrapper__form-group">
+      <div class="devise-form-wrapper__form-group__label"><%= f.label :password_confirmation, "Confirm new password" %><br />
+      <div class="devise-form-wrapper__form-group__field"><%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
+    <div class="devise-form-wrapper__form-group">
+      <%= f.submit "Change my password", class: "devise-form-wrapper__form-group__btn"  %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <% end %>
+  <%= render "devise/shared/links" %>
+</div>
