--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
       <%= link_to "タスク管理", tasks_path %>
     </div>
     <div class="link-group__item">
-      <%= link_to "ルーム作成・検索", new_room_path %>
+      <%= link_to "ルーム新規作成", new_room_path %>
     </div>
     <div class="link-group__item">
       <%= link_to "ひみつの部屋", monsters_path %>
