--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,18 +1,19 @@
 <div class="user-edit-container">
-  <h1 class="user-edit-container__title">マイページ編集</h1>
+  <h1 class="user-edit-container__head">マイページ編集</h1>
   <%= form_with model: @user, local:true do |f| %>
-  <div class="form-wrapper">
-    <div class="form-wrapper__form-group">
-      <div class="form-wrapper__form-group__label"><%= f.label :name, '名前' %></div>
-      <div class="form-wrapper__form-group__field"><%= f.text_field :name %></div>
+  <div class="user-edit-form-wrapper">
+    <div class="user-edit-form-wrapper__form-group">
+      <div class="user-edit-form-wrapper__form-group__label"><%= f.label :name, '名前' %></div>
+      <div class="user-edit-form-wrapper__form-group__field"><%= f.text_field :name, autofocus: true %></div>
     </div>
-    <div class="form-wrapper__form-group">
-      <div class="form-wrapper__form-group__label"><%= f.label :profile_image, 'プロフィール画像' %></div>
-      <div class="form-wrapper__form-group__field"><%= f.attachment_field :profile_image %></div>
+    <div class="user-edit-form-wrapper__form-group">
+      <div class="user-edit-form-wrapper__form-group__label"><%= f.label :profile_image, 'プロフィール画像' %></div>
+      <div><%= f.attachment_field :profile_image %></div>
     </div>
+    <p class="user-edit-form-wrapper__form-group__lead">一番苦手な家事を選択してください。</p>
     <%= render 'devise/registrations/genre-card', f: f %>
-    <div class="form-wrapper__form-group">
-      <%= f.submit "更新", class: "form-wrapper__form-group__btn"  %>
+    <div class="user-edit-form-wrapper__form-group">
+      <%= f.submit "更新", class: "user-edit-form-wrapper__form-group__btn"  %>
     </div>
   <% end %>
   </div>
