--- a/app/assets/stylesheets/users/_user-edit.scss
+++ b/app/assets/stylesheets/users/_user-edit.scss
@@ -2,10 +2,57 @@
 
 .user-edit-container {
   @extend %default-container;
+  width: 100%;
+  text-align: center;
 
-  &__title {
+  &__head {
     @extend %default-title;
+    padding-bottom: 30px;
+  }
+  &__lead {
+    font-size: 15px;
+    padding-bottom: 30px;
   }
 }
 
-// formはsignup参照
+.user-edit-form-wrapper {
+  width: 80vw;
+  margin: 0 auto;
+
+  &__form-group {
+    @extend %default-form-group;
+    display: flex;
+    flex-wrap: wrap;
+
+    &__label {
+      @extend %default-label;
+    }
+    &__field {
+      @extend %default-field;
+
+      & input {
+        @extend %default-input;
+
+        &:focus {
+          @extend %default-focus;
+        }
+      }
+    }
+    &__lead {
+      @extend %default-lead;
+      margin-top: 5rem;
+    }
+    &__btn {
+      @extend %default-form-btn;
+
+      &--wide {
+        @extend %default-form-btn;
+        width: auto;
+      }
+      &:hover {
+        @extend %default-form-btn-hover;
+      }
+    }
+  }
+}
+
